--- a/Web/Pages/BiliDynamic.cshtml
+++ b/Web/Pages/BiliDynamic.cshtml
@@ -20,5 +20,5 @@
 </div>
 
 <div class="row">
-    <component type="typeof(ReplyPagination)" render-mode="ServerPrerendered" param-UserId=@Model.Dynamic.UserId/>
+    <component type="typeof(ReplyPagination)" render-mode="Server" param-ThreadId=@Model.Dynamic.ThreadId/>
 </div>
