--- a/Web/Components/UserPagination.razor
+++ b/Web/Components/UserPagination.razor
@@ -1,12 +1,12 @@
 ﻿@if (!isLoaded)
 {
-    <LoadingScreen />
+    <LoadingScreen/>
 }
 else
 {
     <div class="row justify-content-end">
         <div class="col-3">
-            <input title="动态" style="width: 100%; height: 100%" @bind-value=DescriptionQuery />
+            <input title="用户名" style="width: 100%; height: 100%" @bind-value=UsernameQuery />
         </div>
         <div class="col-1">
             <button type="button" class="btn btn-primary" stype="width: 100%" @onclick=Request>查询</button>
@@ -14,19 +14,19 @@ else
     </div>
 
     <div class="row">
-        <DynamicTable Dynamics="response.Items" DisplayUser="DisplayUser" SortCallback="SortTable" SortMetaData="sortMetaData" />
+        <UserTable Users="response.Items" SortCallback="SortTable" SortMetaData="sortMetaData" />
     </div>
 
-    <div class="row">
+    <div class="row h-auto">
         <div class="col">
             <Pagination MetaData="response.MetaData" Spread="3" OnSelectedPageCallback="SelectedPage" OnChangePageSizeCallback="ChangePageSize" />
         </div>
-        <div class="col-1 text-muted text-end fst-italic" style="font-size: 0.1rem">@requestTime ms</div>
+        <div class="col-1 text-muted text-end fst-italic"  style="font-size: 0.1rem">@requestTime ms</div>
     </div>
 }
 
 @code {
-    public PagingResponse<BiliDynamic> response { get; set; } = new();
+    public PagingResponse<BiliUser> response { get; set; } = new();
 
     [Parameter]
     public int Page { get; set; } = 1;
@@ -35,17 +35,15 @@ else
     [Parameter]
     public string Sort { get; set; } = "-time";
     [Parameter]
-    [SupplyParameterFromQuery(Name = "userId")]
-    public long? UserId { get; set; } = null;
+    public string? UsernameQuery { get; set; } = null;
     [Parameter]
-    public string? DescriptionQuery { get; set; } = null;
-    [Parameter]
-    public bool DisplayUser { get; set; } = false;
+    public string? SignQuery { get; set; } = null;
 
     [Inject]
-    private BiliDynamicService dynamicService { get; set; } = null!;
-    private long requestTime;
+    private BiliUserService userService { get; set; } = null!;
     private SortMetaData sortMetaData => new SortMetaData(Sort);
+
+    private long requestTime;
     private bool isLoaded = false;
 
     protected override async Task OnInitializedAsync()
@@ -53,16 +51,16 @@ else
         await Request();
     }
 
-    private async Task SelectedPage(int page)
-    {
-        Page = page;
-        await Request();
-    }
-
     private async Task ChangePageSize(int size)
     {
         PageSize = size;
         Page = 1;
+        await Request();
+    }
+
+    private async Task SelectedPage(int page)
+    {
+        Page = page;
         await Request();
     }
 
@@ -78,7 +76,7 @@ else
         isLoaded = false;
         var stopWatch = new Stopwatch();
         stopWatch.Start();
-        response = await dynamicService.Pagination(userId: UserId, page: Page, size: PageSize, sort: Sort, descriptionQuery: DescriptionQuery);
+        response = await userService.Pagination(page: Page, size: PageSize, sort: Sort, usernameQuery: UsernameQuery, signQuery: SignQuery);
         stopWatch.Stop();
         requestTime = stopWatch.ElapsedMilliseconds;
         isLoaded = true;
