--- a/Web/Pages/BiliUser.cshtml
+++ b/Web/Pages/BiliUser.cshtml
@@ -1,12 +1,12 @@
 ﻿@page
 @model Web.Pages.BiliUserModel
 @{
-    ViewBag.Title = "用户:" + @Model.User.Username;
+    ViewBag.Title = "用户:" + @Model.UserId;
 }
 
 <div class="row">
     <div class="col-3">
-            <component type="typeof(UserCard)" render-mode="ServerPrerendered" param-User=@Model.User/>
+            <component type="typeof(UserCard)" render-mode="Server" param-UserId=@Model.UserId param-ReplyCountEnabled=@Model.ReplyCountEnabled />
     </div>
     <div class="col">
         <ul class="nav nav-tabs" id="userTab" role="tablist">
@@ -19,10 +19,10 @@
         </ul>
         <div class="tab-content" id="userTabContent">
             <div class="tab-pane fade show active" id="reply" role="tabpanel">
-                <component type="typeof(ReplyPagination)" render-mode="ServerPrerendered" param-UserId=@Model.User.UserId/>
+                <component type="typeof(ReplyPagination)" render-mode="Server" param-UserId=@Model.UserId/>
             </div>
             <div class="tab-pane fade" id="dynamic" role="tabpanel">
-                <component type="typeof(DynamicPagination)" render-mode="ServerPrerendered" param-UserId=@Model.User.UserId />
+                <component type="typeof(DynamicPagination)" render-mode="Server" param-UserId=@Model.UserId />
             </div>
         </div>
         
