--- a/Web/Components/ReplyTable.razor
+++ b/Web/Components/ReplyTable.razor
@@ -70,7 +70,7 @@
     private string SortIcon(string field)
     {
         if (!field.Equals(sortMetaData.Field))
-            return "fa-solid fa-sort";
+            return "fa-thin fa-sort";
         return sortMetaData.GetIconClass();
     }
     private async Task SortTable(string field)
