--- a/Web/Pages/Index.cshtml
+++ b/Web/Pages/Index.cshtml
@@ -43,7 +43,7 @@
             <option value="userId">用户UID</option>
             <option value="usernameQuery">用户名</option>
             <option value="replyQuery">评论</option>
-            <option value="dynamicQuery">动态</option>
+            <option selected value="dynamicQuery">动态</option>
             <option value="dynamicId">动态ID</option>
         </select>
     </div>
