--- a/Web/Components/DynamicTable.razor
+++ b/Web/Components/DynamicTable.razor
@@ -84,7 +84,7 @@
     private string SortIcon(string field)
     {
         if (!field.Equals(sortMetaData.Field))
-            return "fa-solid fa-sort";
+            return "fa-thin fa-sort";
         return sortMetaData.GetIconClass();
     }
     private async Task SortTable(string field)
