--- a/Web/Components/ReplyPagination.razor
+++ b/Web/Components/ReplyPagination.razor
@@ -6,6 +6,9 @@ else
 {
     <div class="row justify-content-end">
         <div class="col-3">
+            <input title="UID" style="width: 100%; height: 100%" @bind-value=UserId />
+        </div>
+        <div class="col-3">
             <input title="评论" style="width: 100%; height: 100%" @bind-value=ContentQuery />
         </div>
         <div class="col-1">
