--- a/BlazorWeb/Pages/Index.razor
+++ b/BlazorWeb/Pages/Index.razor
@@ -7,7 +7,7 @@
 @inject NavigationManager nav
 
 
-<PageTitle>统计</PageTitle>
+<PageTitle>支配剧场-大图书馆</PageTitle>
 
 <MudGrid Class="d-flex justify-start	">
     <MudItem xs="3">
