--- a/BlazorWeb/Pages/_Layout.cshtml
+++ b/BlazorWeb/Pages/_Layout.cshtml
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="referrer" content="no-referrer" />
     <base href="~/" />
+    <link rel="icon" type="image/x-icon" href="/favicon.png">
     <link href="BlazorWeb.styles.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
