--- a/BlazorWeb/Shared/ContainerLayout.razor
+++ b/BlazorWeb/Shared/ContainerLayout.razor
@@ -1,4 +1,6 @@
 ﻿@inherits LayoutComponentBase
+@inject WebUserService webUserService
+@inject NavigationManager nav
 
 <MudThemeProvider />
 <MudDialogProvider />
@@ -35,5 +37,17 @@
     void DrawerToggle()
     {
         _drawerOpen = !_drawerOpen;
+    }
+
+    [CascadingParameter]
+    protected Task<AuthenticationState> AuthState { get; set; } = null!;
+
+    protected override async Task OnInitializedAsync()
+    {
+        await webUserService.Init(AuthState.Result.User.Identity?.Name);
+        if (webUserService.IsBanned)
+        {
+            nav.NavigateTo("MicrosoftIdentity/Account/SignOut", forceLoad: true);
+        }
     }
 }
