--- a/BlazorWeb/Pages/User/UserCard.razor
+++ b/BlazorWeb/Pages/User/UserCard.razor
@@ -1,6 +1,8 @@
 ﻿@page "/user-card/{userId:long}"
 @inject BiliUserService userService
 @inject IBiliReplyRepository replyRepo
+@inject WebUserService webUserService
+@inject NavigationManager nav
 @attribute [Authorize]
 
 <MudPaper Width="300px">
@@ -46,6 +48,9 @@
 
     protected override async Task OnParametersSetAsync()
     {
+        var watch = new Stopwatch();
+        watch.Start();
+
         if (User != null)
             user = User;
         else if (UserId.HasValue)
@@ -53,6 +58,14 @@
 
         if (user != null)
             replyCount = await replyRepo.Collection.CountDocumentsAsync(f => f.UserId == user.UserId);
+
+        watch.Stop();
+        var parameters = new Dictionary<string, object?>()
+        {
+            {"UserId", UserId},
+        };
+
+        await webUserService.Log("UserCard", parameters, status: "Success", elapsed: watch.ElapsedMilliseconds, url: nav.Uri);
 
     }
 
