Revert "Temp remove aad auth"
This reverts commit 78285d71f50ebf115ef466ddfa50ee017a7a644d.

--- a/BlazorWeb/Pages/Dynamic/DynamicPagination.razor
+++ b/BlazorWeb/Pages/Dynamic/DynamicPagination.razor
@@ -3,7 +3,7 @@
 @inject BiliUserService userService
 @inject WebUserService webUserService
 @inject NavigationManager nav
-
+@attribute [Authorize]
 
 <MudTable @ref="table" ServerData=@ServerDataReload Hover="true" Loading="@loading" Striped="true" T="BiliDynamic" AllowUnsorted="false">
     <ToolBarContent>
