--- a/BlazorWeb/Pages/Reply/ReplyLineChart.razor
+++ b/BlazorWeb/Pages/Reply/ReplyLineChart.razor
@@ -4,7 +4,7 @@
 @inject WebUserService webUserService
 @inject NavigationManager nav
 @inject IDialogService dialogService
-
+@attribute [Authorize]
 
 @if (ControllerEnabled)
 {
