--- a/BlazorWeb/Pages/Guest.razor
+++ b/BlazorWeb/Pages/Guest.razor
@@ -62,10 +62,10 @@
                     <MudItem xs="2"></MudItem>
                 </MudGrid>
             </MudPaper>
-            <MudList Clickable="true">
+            <MudList Clickable="false">
                 @foreach (var item in status.TopUsers)
                 {
-                    <MudListItem Href=@($"/user/{item.Item2}") Class="d-inline-flex align-center">
+                    <MudListItem Class="d-inline-flex align-center">
                         <MudGrid>
                             <MudItem xs="9">
                                 <MudText Typo=@Typo.body1>
@@ -127,12 +127,12 @@
                     <MudItem xs="2"></MudItem>
                 </MudGrid>
             </MudPaper>
-            <MudList Clickable="true">
+            <MudList Clickable="false">
                 @if (status.DailyReplyTotalByUp.Item1.Count > 0)
                 {
                     @foreach (var i in Enumerable.Range(0, status.DailyReplyTotalByUp.Item1.Count))
                     {
-                        <MudListItem Href=@($"/dynamic?userId={status.DailyReplyTotalByUp.Item1[i].UserId}") Class="d-inline-flex align-center">
+                        <MudListItem Class="d-inline-flex align-center">
                             <MudGrid>
                                 <MudItem xs="9">
                                     <MudText Typo=@Typo.body1>
