--- a/BlazorWeb/Pages/Dynamic/DynamicPagination.razor
+++ b/BlazorWeb/Pages/Dynamic/DynamicPagination.razor
@@ -10,8 +10,9 @@
         <MudText Typo="Typo.h6">动态列表</MudText>
         <MudSpacer />
         <MudDateRangePicker Label="时间段" Editable="true" DateRangeChanged=@DateRangeChanged DateRange=@dateRange DateFormat="yyyy/MM/dd HH:mm:ss"></MudDateRangePicker>
-        <MudTextField T="string" ValueChanged="@(s => OnSearch(s))" Placeholder="动态内容" Adornment="Adornment.Start"
+        <MudTextField T="string" ValueChanged=@OnSearch Placeholder="动态内容" Adornment="Adornment.Start" Value=@descriptionQuery
                       AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium"></MudTextField>
+        <MudButton Variant=@Variant.Filled Color=@Color.Tertiary OnClick=@OnQueryClick>查询</MudButton>
     </ToolBarContent>
     <ColGroup>
         <col style="width:3rem;" />
@@ -160,7 +161,8 @@
     private void OnSearch(string text)
     {
         descriptionQuery = text;
-        table.ReloadServerData();
+        loading = false;
+        StateHasChanged();
     }
 
     private void DateRangeChanged(DateRange dateRange)
@@ -177,7 +179,8 @@
             endTime = dateRange.End?.ToUniversalTime();
         }
 
-        table.ReloadServerData();
+        loading = false;
+        StateHasChanged();
     }
 
     private BiliUser? GetUser(long userId)
@@ -192,5 +195,10 @@
         if (recordDict.TryGetValue(dynamicId, out BiliDynamicRunRecord? value))
             return value;
         return value;
+    }
+
+    private void OnQueryClick(MouseEventArgs e)
+    {
+        table.ReloadServerData();
     }
 }
